--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "clsx": "^2.0.0",
+    "framer-motion": "^12.5.0",
+    "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-rnd": "^10.4.1",
-    "@heroicons/react": "^2.1.1",
-    "clsx": "^2.0.0"
+    "react-rnd": "^10.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
