--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-rnd": "^10.4.1"
+    "react-rnd": "^10.4.1",
+    "sonner": "^2.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
